--- a/src/Components/UI/SeleccionarPokemon.css
+++ b/src/Components/UI/SeleccionarPokemon.css
@@ -55,3 +55,21 @@
 .react-select__single-value {
   color: var(--text);
 }
+
+[data-theme="dark"] .react-select__control {
+  background-color: #2c2c2c;
+  border-color: #555;
+  color: #797878;
+}
+
+[data-theme="dark"] .react-select__menu {
+  background-color: #1f1f1f;
+}
+
+[data-theme="dark"] .react-select__option {
+  color: #8a8787;
+}
+
+[data-theme="dark"] .react-select__single-value {
+  color: #5f5d5d;
+}
